test/langtools/tools/javac/lambda/methodReference/PrivateMethodReferenceWithTypeVarTest.out
PrivateMethodReferenceWithTypeVarTest.java:15:23: compiler.err.cant.resolve.location: kindname.class, Test, , , (compiler.misc.location: kindname.class, PrivateMethodReferenceWithTypeVarTest, null)
PrivateMethodReferenceWithTypeVarTest.java:16:16: compiler.err.invalid.mref: kindname.method, (compiler.misc.cant.resolve.location.args: kindname.method, asString, , T, (compiler.misc.location: kindname.type.variable.bound, T, null))
2 errors
